# agenthalo

./: .dockerignore  .gitignore  .mcp.json  AGENTS.md  CITATION.cff  CLAUDE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  Dockerfile.mcp  Dockerfile.nym  LICENSE.md  README.md  docker-compose.discord.yml  docker-compose.yml  install.sh  lake-manifest.json  lakefile.lean
.claude/skills/: orchestrator-pipes
.codex/: config.toml
.codex/skills/: orchestrator-quickstart
.gemini/skills/: halo-trace-inspection
.github/: pull_request_template.md
.github/workflows/: sync-playground.yml
Docs/: AGENTHALO.md  AGENTHALO_ONCHAIN_PHASE5.md  ARCHITECTURE.md  ARTICLE_SUMMARY.md  FORMAL_VERIFICATION.md  SYSTEM_DIAGRAM.md  container_operator_security.md  system_diagram.html
Docs/integration/: heyting_epistemic_magnitude_integration_pm_instructions.md
Docs/ops/: mcp_streamable_http.md  nucleusdb_groth16_adapter_delivery_accounting_2026-02-24.md  orchestrator_debugging_playbook.md  pq_evm_assessment.md  pq_mesh_hardening.md  pq_nym_assessment.md  sovereign_comm_stack_audit_report_2026-03-03.md
WIP/: agenthalo_definitive_acceptance_test_corrigendum_20260303.md  agenthalo_definitive_acceptance_test_instructions_2026-03-03.md  agenthalo_definitive_acceptance_test_report_20260303.md  agenthalo_formal_provenance_note_2026-03-10.md  bitswap_remote_fetch_tracking_2026-03-08.md  container_architecture_qa_report_2026-03-10.md  nucleusdb_qa_audit_2026-02-22.md  openclaw_capability_audit_20260313.md  openclaw_chat_adapters_deferred_20260313.md  phase1_audit_response_2026-02-21.md  phase2_completion_report_2026-02-21.md  phase3_completion_report_2026-02-21.md  phase4_completion_report_2026-02-21.md  phase5_completion_report_2026-02-21.md  phase6_completion_report_2026-02-21.md  pq_defense_in_depth_partner_instructions_2026-03-04.md  pq_hardening_closure_report_2026-03-04.md  project_ledger_nucleusdb_formal_integration_v2_2026-03-11.md  sovereign_comm_stack_preproject_plan_2026-03-03.md
artifacts/living_agent/: paper_embeddings.json  paper_embeddings.npz  sns_model_info.json
configs/: agentpmt_product_registry.json  proof_gate.json
contracts/: CrossChainAttestationQuery.sol  Groth16VerifierAdapter.sol  TrustVerifier.sol  TrustVerifierMultiChain.sol  foundry.toml
contracts/circuits/: README.md  trust_attestation.circom
contracts/mocks/: MockGroth16Verifier.sol  MockTrustProofVerifier.sol  MockUSDC.sol
contracts/scripts/: README.md  attestation_evidence_retention_policy_v1.json  bundle_attestation_evidence.py  deploy_agenthalo_trust_base_sepolia.sh  deploy_base_sepolia.sh  deploy_mock_e2e_base_sepolia.sh  deploy_multichain_base_sepolia.sh  e2e_agenthalo_attestation_base_sepolia.sh  e2e_attestation_economics_base_sepolia.sh  e2e_attestation_economics_local.sh  e2e_multichain_base_sepolia.sh  enforce_attestation_bundle_retention.py  mutation_fuzz_attestation_phase10.py  promote_attestation_release.sh  rehearse_attestation_release_required.sh  replay_attestation_promotion_offline.py  run_attestation_economics_gate.sh  run_attestation_phase11_release_gate.sh  run_attestation_phase12_external_readiness_gate.sh  run_attestation_phase13_launch_gate.sh  verify_agenthalo_phase5_artifacts.py  verify_attestation_gate_artifacts.py  verify_attestation_phase11_gate.py  verify_attestation_phase13_launch_gate.py
contracts/test/: Groth16VerifierAdapter.t.sol  TrustVerifier.t.sol  TrustVerifierMultiChain.t.sol
dashboard/: app.js  cockpit.css  cockpit.js  codeguard.html  containers.js  deploy.css  deploy.js  forge.css  forge.html  forge.js  gates.css  gates.html  gates.js  genesis-docs.js  index.html  lean.js  mcp-tools.js  observatory.css  observatory.js  orchestration.css  orchestration.js  orchestrator.css  orchestrator.js  proof-explorer.js  proof-game.css  proof-game.js  proof-lattice.json  skills.js  style.css  system-monitor.js
deploy/: agenthalo-dashboard.service  agenthalo-discord.service  agenthalo-mcp.service  agenthalo-p2p-bridge.service  discord.env.example  install.sh  nucleusdb-p2p-bridge.service
docker/: .gitignore  Dockerfile.heytinglean  build_stripped_cache.sh
docs/: index.html  proof-lattice.json
lean/: NucleusDB.lean
lean-xray/: .gitignore  Cargo.toml
lean-xray/src/: clustering.rs  dependency.rs  global.rs  main.rs  metrics.rs  parser.rs  scanner.rs  types.rs
lean/NucleusDB/: Comms.lean  Genesis.lean
python/living_agent/: living_agent_common.py  living_agent_hive_publisher.py  living_agent_hive_publisher_test.py  living_agent_learning_loop_test.py  living_agent_sns_embeddings.py  living_agent_verify.py  living_agent_verify_test.py
scripts/: agenthalo-entrypoint.sh  agenthalo-healthcheck.sh  agenthalo-instances.sh  capture_proof_explorer_gif.py  check_diagram_freshness.sh  check_lean_rust_correspondence.sh  check_theory_boundary.py  container_architecture_integration.sh  extract_proof_graph.py  formal_provenance_resolver.py  generate_proof_certificates.sh  mcp_stdio_bridge.py  nucleusdb-entrypoint.sh  nym-discover-provider.sh  nym-entrypoint.sh  orchestrator_mcp_smoke.sh  sync_external_skills.py  validate_formal_provenance.sh
src/: api.rs  audit.rs  blob_store.rs  embeddings.rs  governor.rs  identity.rs  immutable.rs  lib.rs  license.rs  memory.rs  multitenant.rs  persistence.rs  protocol.rs  security.rs  type_map.rs  typed_value.rs  vector_index.rs
src/cli/: mod.rs  repl.rs
src/cockpit/: deploy.rs  mod.rs  pty_manager.rs  session.rs  ws_bridge.rs
src/comms/: didcomm.rs  envelope.rs  mod.rs  session.rs
src/container/: agent_hookup.rs  agent_lock.rs  backend.rs  builder.rs  launcher.rs  (+6 more)
tests/: abraxas_e2e.py  abraxas_merge_agent_tests.rs  abraxas_vcs_tests.rs  cli_smoke_tests.rs  container_tests.rs  dashboard_tests.rs  end_to_end.rs  formal_integration_tests.rs  governance_falsifiable.rs  halo_integration.rs  mcp_remote_e2e.py  memory_recall_integration.rs  mesh_simulation_test.rs  p2pclaw_integration.rs  pcn_tests.rs  persistence_compat_tests.rs  puf_tests.rs  sql_tests.rs  theory_boundary_tests.rs
wdk-sidecar/: index.mjs  package-lock.json  package.json
(+238 files in other folders)
