[package]
name = "nucleusdb"
version = "0.1.0"
edition = "2021"
description = "Verifiable database with vector commitments, post-quantum signatures, and Certificate Transparency"
license = "Apoth3osis-License-Stack-v1"
repository = "https://github.com/Abraxas1010/agenthalo"

[lib]
name = "nucleusdb"
path = "src/lib.rs"

[[bin]]
name = "nucleusdb"
path = "src/bin/nucleusdb.rs"

[[bin]]
name = "nucleusdb-server"
path = "src/bin/nucleusdb_server.rs"

[[bin]]
name = "nucleusdb-tui"
path = "src/bin/nucleusdb_tui.rs"

[[bin]]
name = "nucleusdb-mcp"
path = "src/bin/nucleusdb_mcp.rs"

[[bin]]
name = "agenthalo"
path = "src/bin/agenthalo.rs"

[[bin]]
name = "agenthalo-mcp-server"
path = "src/bin/agenthalo_mcp_server.rs"

[features]
default = ["puf-server"]
puf-server = []
puf-tpm = ["dep:tss-esapi"]
puf-dgx = ["puf-server"]
puf-browser = []
container-runtime = []

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "io-std"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
redb = "2.2.0"
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-serialize = "0.5.0"
ark-snark = "0.5.0"
k256 = { version = "0.13", features = ["ecdsa"] }
num-bigint = "0.4"
rand_chacha = "0.3"
rand_core = "0.6"
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
ed25519-dalek = "2.2.0"
kzg-mini = "0.1.1"
ml-dsa = "0.1.0-rc.7"
sqlparser = "0.59.0"
clap = { version = "4", features = ["derive"] }
rustyline = "15"
ratatui = "0.30"
crossterm = "0.28"
rmcp = { version = "0.16.0", features = ["transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-worker", "schemars"] }
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
jsonwebtoken = "9"
schemars = "1"
chrono = "0.4"
tss-esapi = { version = "7", optional = true, default-features = false }
dirs = "6"
webbrowser = "1"
ureq = { version = "3", features = ["json"] }
rust-embed = "8"
mime_guess = "2"
tokio-stream = "0.1"
portable-pty = "0.9"
aes-gcm = "0.10"
hkdf = "0.12"
futures-util = "0.3"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"
libc = "0.2"

[dev-dependencies]
tempfile = "3"
