[package]
name = "nucleusdb"
version = "0.3.0"
edition = "2021"
description = "Agent H.A.L.O. — Human-AI Agent Lifecycle Orchestrator. Tamper-proof observability for AI agents, built on NucleusDB (verifiable database with vector commitments, post-quantum signatures, and Certificate Transparency)."
license = "Apoth3osis-License-Stack-v1"
repository = "https://github.com/Abraxas1010/agenthalo"

[lib]
name = "nucleusdb"
path = "src/lib.rs"

[[bin]]
name = "nucleusdb"
path = "src/bin/nucleusdb.rs"

[[bin]]
name = "nucleusdb-server"
path = "src/bin/nucleusdb_server.rs"

[[bin]]
name = "nucleusdb-tui"
path = "src/bin/nucleusdb_tui.rs"

[[bin]]
name = "nucleusdb-mcp"
path = "src/bin/nucleusdb_mcp.rs"

[[bin]]
name = "nucleusdb-discord"
path = "src/bin/nucleusdb_discord.rs"

[[bin]]
name = "agenthalo"
path = "src/bin/agenthalo.rs"

[[bin]]
name = "agenthalo-mcp-server"
path = "src/bin/agenthalo_mcp_server.rs"

[features]
default = ["puf-server"]
puf-server = []
puf-tpm = ["dep:tss-esapi"]
puf-dgx = ["puf-server"]
puf-browser = []
zk-compute = ["dep:risc0-zkvm"]
nym-native = ["dep:nym-sdk"]

[dependencies]
axum = { version = "0.8.6", features = ["ws"] }
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread", "net", "io-std", "sync", "time"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
sha2 = "0.10"
hmac = "0.12"
redb = "2.2.0"
ark-bls12-381 = "0.5.0"
ark-bn254 = "0.5.0"
ark-ec = "0.5.0"
ark-ff = "0.5.0"
ark-groth16 = "0.5.0"
ark-relations = "0.5.1"
ark-serialize = "0.5.0"
ark-snark = "0.5.0"
k256 = { version = "0.13", features = ["ecdsa"] }
num-bigint = "0.4"
rand_chacha = "0.3"
rand_core = "0.6"
curve25519-dalek = { version = "4.1.3", features = ["digest"] }
ed25519-dalek = "2.2.0"
x25519-dalek = { version = "2.0", features = ["static_secrets"] }
multibase = "0.9"
kzg-mini = "0.1.1"
ml-dsa = "0.1.0-rc.7"
ml-kem = { version = "0.2", features = ["zeroize"] }
sqlparser = "0.59.0"
clap = { version = "4", features = ["derive"] }
rustyline = "15"
ratatui = "0.30"
crossterm = "0.28"
rmcp = { version = "0.16.0", features = ["transport-io", "transport-streamable-http-server", "transport-streamable-http-server-session", "transport-worker", "schemars"] }
async-trait = "0.1"
tower = { version = "0.5", features = ["limit"] }
tower-http = { version = "0.6", features = ["cors"] }
uuid = { version = "1", features = ["v4"] }
base64 = "0.22"
jsonwebtoken = "9"
schemars = "1"
chrono = "0.4"
tss-esapi = { version = "7", optional = true, default-features = false }
dirs = "6"
webbrowser = "1"
ureq = { version = "3", features = ["json", "socks-proxy"] }
url = "2"
fs2 = "0.4"
libc = "0.2"
deunicode = "1"
rust-embed = "8"
mime_guess = "2"
tokio-stream = "0.1"
portable-pty = "0.9"
aes-gcm = "0.10"
hkdf = "0.12"
hex = "0.4"
argon2 = "0.5"
bip39 = "2.1"
bip32 = { version = "0.5", features = ["mnemonic"] }
sha3 = "0.10"
getrandom = "0.2"
futures-util = "0.3"
mid = "2"
mac_address = "1"
blake3 = "1"
zeroize = { version = "1.8", features = ["derive"] }
subtle = "2.6"
ndarray = "0.17"
ort = { version = "=2.0.0-rc.11", default-features = false, features = ["std", "ndarray", "download-binaries", "tls-rustls"] }
tokenizers = "0.20"
risc0-zkvm = { version = "1.2", optional = true }
libp2p = { version = "0.54", features = [
    "tokio",
    "tcp",
    "noise",
    "yamux",
    "kad",
    "gossipsub",
    "mdns",
    "identify",
    "autonat",
    "relay",
    "dcutr",
    "macros",
    "request-response",
    "ed25519",
    "serde",
] }
nym-sdk = { version = "1.20.4", optional = true }
serenity = { version = "0.12", default-features = false, features = ["client", "gateway", "model", "cache", "rustls_backend"] }
poise = "0.6"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
tempfile = "3"
git2 = "0.20"

[target.'cfg(unix)'.dependencies]
signal-hook = "0.3"

[dev-dependencies]

[patch.crates-io]
cipher = { path = "vendor/cipher-0.5.1-patched" }
