[package]
name = "lean-xray"
version = "0.1.0"
edition = "2021"
description = "Fast Lean 4 project scanner for the HeytingLean Observatory"

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
regex = "1"
walkdir = "2"
clap = { version = "4", features = ["derive"] }
ignore = "0.4"          # .gitignore-aware file walking

[dev-dependencies]
tempfile = "3"
